# api-spec.yaml
@@ -10,7 +10,7 @@ info:
         calls.
 
 #host: virtualwatershed.org
-host: localhost\:5000
+host: "localhost:5000"
 basePath: /api
 
 schemes:
@@ -30,6 +30,19 @@ paths:
     #############
     # Scenarios #
     #############
+    /base-veg-map:
+        get:
+            summary: get the base map used to generate initial view of landscape
+            tags:
+                - scenarios
+            operationId: getBaseVegetationMap
+
+            responses:
+                200:
+                    description: "successful operation"
+                    schema:
+                        $ref: "#/definitions/VegMap"
+
     /scenarios:
         get:
             summary: list all scenarios
@@ -41,9 +54,9 @@ paths:
                 200:
                     description: "successful operation"
                     schema:
-                        type: "array"
-                        items:
-                            $ref: "#/definitions/Scenario"
+                        type: object
+                        schema:
+                            $ref: "#/definitions/Scenarios"
 
         post:
             summary: request a new scenario
@@ -52,15 +65,16 @@ paths:
             operationId: runNewScenario
 
             parameters:
-                - name: fire_geometry
+                - name: vegetation_updates
                   type: object
+                  description: list of 
                   in: body
-                  description: 
-                      <a href="http://geojson.org/geojson-spec.html#id7">GeoJSON 
-                      Multipolygon</a> of the fire area(s)</a>
                   schema:
-                      type:
-                          $ref: 'http://geojson.org/geojson-spec.html#id7'
+                      $ref: "#/definitions/VegetationUpdates"
+                - name: name
+                  type: string
+                  description: descriptive name for the scenario
+                  in: body
 
             responses:
                 200:
@@ -81,30 +95,6 @@ paths:
                   required: true
                   type: string
 
-
-            responses:
-                200:
-                    description: "successful operation"
-                    schema:
-                        $ref: "#/definitions/Scenario" 
-
-        put:
-            summary: lookup a scenario by its id
-            tags:
-                - scenarios
-            operationId: getScenario
-
-            parameters:
-                - name: scenarioId
-                  in: path
-                  required: true
-                  type: string
-
-                - name: name
-                  in: body
-                  required: false
-                  type: string
-                  description: update scenario name
 
             responses:
                 200:
@@ -155,20 +145,12 @@ definitions:
                 type: string
                 format: date-time
                 description: auto-generated by server when scenario model has finished
-            fire_geometry:
+            veg_map_by_hru:
                 type: object
-                description:
-                    <a href="http://geojson.org/geojson-spec.html#id7">GeoJSON 
-                    Multipolygon</a> of the fire area(s)
+                description: object with hru indices in array by vegetation code (0-4)
                 schema:
                     type:
-                        $ref: 'http://geojson.org/geojson-spec.html#id7'
-            total_fire_area:
-                type: float
-                description:
-                    total calculated area of the fire_geometry 
-                    <a href="http://geojson.org/geojson-spec.html#id7">GeoJSON 
-                    Multipolygon</a> of the fire area(s)
+                        $ref: "#/definitions/VegMapByHRU"
             inputs:
                 type: object
                 description: download links to control, data, and parameter files for scenario
@@ -206,3 +188,102 @@ definitions:
         properties:
             file1: string
             description: yo
+
+    VegMap:
+        type: object
+        description: vegetation map presented to client that can be modified
+        properties:
+            projection_information:
+                type: object
+                schema:
+                    $ref: '#/definitions/VegMapInfo'
+            vegetation_map:
+                type: object
+                schema:
+                    $ref: '#/definitions/VegMapByHRU'
+
+    VegMapProjInfo:
+        properties:
+            cellsize(m): 
+                type: float
+            ncol:
+                type: integer
+            nrow:
+                type: integer
+            xllcorner:
+                type: float
+            xurcorner:
+                type: float
+            yllcorner:
+                type: float
+            yurcorner:
+                type: float
+
+    VegMapByHRU:
+        properties:
+            bare_ground:
+                type: object
+                schema:
+                    $ref: '#/definitions/CellsByVegType'
+            grasses:
+                type: object
+                schema:
+                    $ref: '#/definitions/CellsByVegType'
+            shrubs:
+                type: object
+                schema:
+                    $ref: '#/definitions/CellsByVegType'
+            trees:
+                type: object
+                schema:
+                    $ref: '#/definitions/CellsByVegType'
+            conifers:
+                type: object
+                schema:
+                    $ref: '#/definitions/CellsByVegType'
+                
+    CellsByVegType:
+        properties:
+            HRU_number:
+                type: array
+                items:
+                    type: integer
+
+    VegetationUpdate:
+        properties:
+            cov_type_code:
+                type: integer
+                description: PRMS vegetation code (0-4)
+            HRU_number:
+                type: array
+                items:
+                    type: integer
+
+    VegetationUpdates:
+        properties:
+            vegetation_updates:
+                type: array
+                items:
+                    type: object
+                    schema:
+                        $ref: '#/definitions/VegetationUpdate'
+
+    Scenarios:
+        properties:
+            scenarios:
+                type: array
+                items:
+                    type: object
+                    schema:
+                        $ref: '#/definitions/Scenario'
+
+    Hydrograph:
+        properties:
+            time_array:
+                type: array
+                items:
+                    type: dateTime
+            streamflow_array:
+                type: array
+                items:
+                    type: float
